fixed postcard previews and removed collapsable class

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,6 +3,10 @@ html, body {
     padding-bottom: 100px;
 }
 
+.container {
+  padding-bottom: 15px;
+}
+
 .background-image {
   position: absolute;;
   top: 0;
@@ -99,10 +103,6 @@ html, body {
   margin-top: 5px;
 }
 
-.container {
-  padding-bottom: 10px;
-}
-
 .bottom-gutter {
   margin-bottom: 30px;
 }
@@ -113,10 +113,6 @@ html, body {
   justify-content: center;
   height: 100%;
 }*/
-
-.container {
-  padding-bottom: 50px;
-}
 
 footer {
   position: fixed;
@@ -454,18 +450,20 @@ a:hover {
 
 /*Buttons*/
 .btn {
-  border: solid;
-  padding: 10px 20px 10px 20px;
-  background-color: #FFFBCA;
-  padding-top: 15px;
-  border-color: #FFF02A;
-  color: #000;
-  border-radius: 3px;
+  /*padding: 10px 20px 10px 20px;*/
+  background-color: #6DC4E2;
+  padding-top: 10px;
+  border-color: #AAE0F8;
+  color: #FFF;
+  border-radius: 0;
+  box-shadow: 4px 4px 0 rgb(212, 239, 251);
   font-family: 'Helvetica Neue Medium';
+  font-size: 14pt;
 }
 
 .btn:hover {
-  background-color: #FFF02A;
+  opacity: .5;
+  color: #FFF;
 }
 
 .btn-tab {
@@ -616,21 +614,4 @@ a:hover {
 
 .fade.ng-hide-add {
   transition: all linear 500ms;
-}
-
-.collapsable {
-    display: inline-block;
-    overflow: hidden;
-    height: 0;
-    width: 100%;
-    transition: height 1s;
-    -webkit-transition: height 1s;
-    -moz-transition: height 1s;
-    -o-transition: height 1s;
-  }
-  /*TODO figure out how to make the animation work*/
-  .collapsable.showMe {
-  width: 100%;
-  height: auto;
-  /*height: 100%;*/
 }
